components/1-python/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: test-app-psturc
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: 1-python
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: el1-python
  namespace: psturc
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-1-python
    weight: null
status: {}
